add _normalize.scss, remove primary .css from css folder, correct in .html link to new .css - it's made by programm in scss folder

--- a/index.html
+++ b/index.html
@@ -4,12 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sass</title>
-    <link rel="stylesheet" href="css/styles.css" type="text/css" />
-   <style>
-     /*  body {
-           background-color: brown;
-       }   */
-   </style>
+    <link rel="stylesheet" href="scss/style.css" type="text/css" />
+ 
 </head>
 <body>
     <header>
