--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sass</title>
-    <link rel="stylesheet" href="scss/style.css" type="text/css" />
+    <link rel="stylesheet" href="css/css/style.css" type="text/css" />
  
 </head>
 <body>
