--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
               <li><a href="#media">Media</a></li>
               <li><a href="#tables">Tables</a></li>
               <li><a href="#forms">Forms</a></li>
+              <li><a href="#forms">Forms1</a></li>
             </ul>
           </nav>
         </div>
