add content in partials - _base.scss, _variables.scss, _madis.scss, some in .html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sass</title>
-    <link rel="stylesheet" href="css/css/style.css" type="text/css" />
+    <link rel="stylesheet" href="css/style.css" type="text/css" />
  
 </head>
 <body>
@@ -110,7 +110,7 @@
         </div><!-- container -->
       </section>
       
-      <section id="media">
+      <section class="media">
         <div class="container">
           <h1>Media</h1>
           <ol class="media">
