--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
       </header>
 
-      <section class="jumbotron" id="jumbotron">
+      <section class="background jumbotron" id="jumbotron">
         <div class="container">
           <h1>Jumbotron</h1>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt cum doloribus asperiores rem beatae commodi excepturi incidunt dicta illum expedita, necessitatibus consequatur obcaecati nobis optio dolorum accusantium, ad dolor sed.</p>
