add some changes _mixins(main features here), and in variable

--- a/index.html
+++ b/index.html
@@ -61,6 +61,11 @@
         </div><!-- container -->
       </section>
       
+<section class="bridge background"></section>
+<div class="container">
+  <h1>Bridge Background</h1>
+</div>
+
       <section id="lists">
         <div class="container">
           <h1>Lists</h1>
