--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
       <section id="buttons">
         <div class="container">
           <h1>Buttons</h1>
-          <button>Default</button>
-          <button>Cool</button>
-          <button>Hot</button>
+          <button class="btn btn-default">Default</button>
+          <button class="btn btn-cool">Cool</button>
+          <button class="btn btn-hot">Hot</button>
         </div><!-- container -->
       </section>
       
