create list elements _interface.scss, $roundness for value of img angles

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
         </div>
       </section>
       
-      <section id="tables">
+      <section class="tables">
         <div class="container">
           <h1>Tables</h1>
           <table class="table">
