--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
           <button class="btn-default">Default</button>
           <button class="btn-cool">Cool</button>
           <button class="btn-hot">Hot</button>
+          <button class="btn-purple">Purple</button>
         </div><!-- container -->
       </section>
       
